<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F6F6E9"
    android:clickable="true">

    <TextView
        android:id="@+id/memo_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_memo_text"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/new_memo_guideline_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/new_memo_guideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"/>

    <EditText
        android:id="@+id/new_memo_title"
        android:layout_width="@dimen/new_memo_edit_width"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/new_memo_guideline_1"
        app:layout_constraintStart_toEndOf="@id/new_memo_title_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/new_memo_contents" />

    <EditText
        android:id="@+id/new_memo_contents"
        android:layout_width="@dimen/new_memo_edit_width"
        android:layout_height="@dimen/new_memo_contents_height"
        android:inputType="textMultiLine"
        android:maxLines="10"
        android:background="#eeeeee"
        app:layout_constraintTop_toBottomOf="@id/new_memo_title"
        app:layout_constraintStart_toEndOf="@id/new_memo_contents_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/new_memo_guideline_2"/>

    <TextView
        android:id="@+id/new_memo_title_label"
        android:layout_width="@dimen/new_memo_label_width"
        android:layout_height="wrap_content"
        android:text="@string/new_memo_title_label"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/new_memo_guideline_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/new_memo_title"
        app:layout_constraintBottom_toTopOf="@id/new_memo_contents_label"/>

    <TextView
        android:id="@+id/new_memo_contents_label"
        android:layout_width="@dimen/new_memo_label_width"
        android:layout_height="@dimen/new_memo_contents_height"
        android:text="@string/new_memo_contents_label"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/new_memo_title_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/new_memo_contents"
        app:layout_constraintBottom_toBottomOf="@id/new_memo_guideline_2"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/new_memo_guideline_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"/>

    <Button
        android:id="@+id/new_memo_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_memo_add_button"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/new_memo_guideline_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>